--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.8",
     "lucide-react": "^0.452.0",
+    "mysql2": "^3.11.3",
+    "net": "^1.0.2",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tls": "^0.0.1"
   },
   "devDependencies": {
+    "@types/mysql": "^2.15.26",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
